# rag-policy

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: chat_ui.py  cleanup_db.py  embedding.py  google_llm_response.py  ingestion.py  llm_response.py  main.py  retreival.py  storing.py  upload_ui.py  verify_collection.py
src/policy_rag/: ingestion.py
