[project]
name = "policy-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "rianto42",email = "rianto.utomo@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.26.0,<2.0.0)",
    "transformers (>=4.52.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "policy_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
